# SpringMapConvNG

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
cmake/: FindDevIL.cmake
debug-map-template/: README.md  mapinfo.lua
docs/superpowers/plans/: 2026-06-30-debug-mipmap-map.md
docs/superpowers/specs/: 2026-06-30-debug-mipmap-map-design.md
src/: CRC.cpp  DebugTile.cpp  DebugTile.h  Dxt1.cpp  Dxt1.h  Dxt1Encode.cpp  Dxt1Encode.h  Image.cpp  Image.h  Raster.cpp  Raster.h  SMFMap.cpp  SMFMap.h  TileStorage.cpp  TileStorage.h  mapcompile.cpp  mapdecompile.cpp
tests/: debugmips.sh  smt_numtiles.sh
